--- a/templates/sideBar.html
+++ b/templates/sideBar.html
@@ -57,10 +57,10 @@
             <li class="sidebar__tools">
                 <p>Herramientas<span class="material-symbols-outlined">build</span></p>
                 <div class="sidebar__item">
-                    <label for="export-object" class="sidebar__item-link export-log-label">
+                    <label for="export-log" class="sidebar__item-link export-log-label">
                         <span class="material-symbols-outlined">arrow_circle_down</span>
                         <p>Exportar Historial</p>
-                    </label>
+                    </label> 
                 </div> 
             {% endif %}
             {% elif path == 'manage_borrowings' %}
