--- a/static/CSS/Objects/mainStyles.css
+++ b/static/CSS/Objects/mainStyles.css
@@ -354,57 +354,6 @@ textarea {
     font-size: .9rem;
 }
 
-dialog {
-    border: none;
-    border-radius: 20px;
-    padding: 25px 40px;
-}
-
-dialog label.material-symbols-outlined {
-    position: absolute;
-    top: 5px;
-    right: 7px;
-    color: var(--fb-color);
-    background-color: transparent;
-    border: none;
-    font-size: 1.5rem; 
-    cursor: pointer;
-}
-
-dialog p {
-    font-size: 1.2rem;
-    margin-bottom: 20px;
-}
-
-dialog div {
-    display: flex;
-    gap: 15px;
-}
-
-dialog button {
-    background-color: var(--fb-color);
-    color: #fff;
-    width: 50px;
-    padding-top: 3.5px;
-    border: none;
-    outline: none;
-    border-radius: 3px;
-    font-family: inherit;
-    text-transform: uppercase;
-    text-align: center;
-    cursor: pointer;
-    transition: background-color .2s, color .2s, font-weight .2s, outline .2s; 
-}
-
-dialog button:hover {
-    outline: var(--wood) 1px solid;
-    color: var(--fb-color);
-    background-color: var(--bg-color);
-    font-weight: 600;
-    box-shadow: var(--wood) 0 0 5px;
-}
-
-
 
 
 /* MESSAGES STYLES */
@@ -483,6 +432,66 @@ dialog button:hover {
   pointer-events: none;
 }
 
+/* DIALOG TO CREATE GROUP*/
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2000;
+}
+
+.modal-content {
+    background: var(--sidebar-color);
+    padding: 20px 30px;
+    border-radius: 12px;
+    width: 30%;
+    text-align: center;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+    animation: fadeIn 0.2s ease-in-out;
+}
+
+.modal-buttons {
+    margin-top: 20px;
+    display: flex;
+    justify-content: right;
+    gap: 5%;
+}
+
+.btn-cancel {
+    background: #ccc;
+    border: none;
+    padding: 8px 15px;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.btn-confirm {
+    background: var(--fb-color);
+    color: #fff;
+    border: none;
+    padding: 8px 15px;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.btn-cancel:hover,
+.btn-confirm:hover {     
+    outline: var(--wood) 1px solid;
+    color: var(--fb-color);
+    background-color: var(--bg-color);
+    font-weight: 600;
+    box-shadow: var(--wood) 0 0 5px; }
+
+@keyframes fadeIn {
+    from { opacity: 0; transform: scale(0.9); }
+    to   { opacity: 1; transform: scale(1); }
+}
 
 @keyframes slideIn {
   from {
@@ -508,6 +517,9 @@ dialog button:hover {
 
     .sidebar__form {
         display: none;
+    }
+    .modal-content {
+        width: 80%;
     }
 }
 
@@ -568,12 +580,16 @@ dialog button:hover {
     }
 }
 
+
 @media (max-height: 840px) and (max-width: 1024px) {
 
     .forms-container form {
         height: 80dvh;
         margin-top: calc(calc(calc(100dvh - calc(2rem + 44.78px)) - 75dvh) / 2);
     } 
+    .modal-content {
+        width: 65%;
+    }
 }
 
 @media (min-height: 1024px) and (max-width: 1024px) {
