--- a/static/CSS/Objects/objectsGroupStyles.css
+++ b/static/CSS/Objects/objectsGroupStyles.css
@@ -260,55 +260,71 @@ textarea {
     font-size: .9rem;
 }
 
-dialog {
-    border: none;
-    border-radius: 20px;
-    padding: 25px 40px;
-}
-
-dialog label.material-symbols-outlined {
-    position: absolute;
-    top: 5px;
-    right: 7px;
-    color: var(--fb-color);
-    background-color: transparent;
-    border: none;
-    font-size: 1.5rem; 
-    cursor: pointer;
-}
-
-dialog p {
-    font-size: 1.2rem;
-    margin-bottom: 20px;
-}
-
-dialog div {
+/* DIALOG TO CREATE GROUP */
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.6);
     display: flex;
-    gap: 15px;
+    justify-content: center;
+    align-items: center;
+    z-index: 2000;
 }
 
-dialog button {
-    background-color: var(--fb-color);
-    color: #fff;
-    width: 50px;
-    padding-top: 3.5px;
-    border: none;
-    outline: none;
-    border-radius: 3px;
-    font-family: inherit;
-    text-transform: uppercase;
+.modal-content {
+    background: var(--sidebar-color);
+    padding: 20px 30px;
+    border-radius: 12px;
+    width: 30%;
     text-align: center;
-    cursor: pointer;
-    transition: background-color .2s, color .2s, font-weight .2s, outline .2s; 
+    box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+    animation: fadeIn 0.2s ease-in-out;
 }
 
-dialog button:hover {
+.modal-buttons {
+    margin-top: 20px;
+    display: flex;
+    justify-content: right;
+    gap: 5%;
+}
+
+.btn-cancel {
+    background: #ccc;
+    border: none;
+    padding: 8px 15px;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.btn-confirm, .btn-delete {
+    background: var(--fb-color);
+    color: #fff;
+    border: none;
+    padding: 8px 15px;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.btn-cancel:hover,
+.btn-confirm:hover {     
     outline: var(--wood) 1px solid;
     color: var(--fb-color);
     background-color: var(--bg-color);
     font-weight: 600;
-    box-shadow: var(--wood) 0 0 5px;
-}
+    box-shadow: var(--wood) 0 0 5px; }
+
+.btn-delete:hover {
+    outline: var(--wood) 1px solid;
+    color: var(--sidebar-color);
+    font-weight: 600;
+    box-shadow: var(--wood) 0 0 5px; 
+    background: #c9302c; }
+/* DIALOG TO DELETE GROUP */
+
+
 
 /* MESSAGES STYLES */
 .hidden {
@@ -581,6 +597,12 @@ dialog button:hover {
   min-height: 80px;
 }
 
+
+@keyframes fadeIn {
+    from { opacity: 0; transform: scale(0.9); }
+    to   { opacity: 1; transform: scale(1); }
+}
+
 @keyframes slideIn {
   from {
     opacity: 0;
@@ -653,6 +675,9 @@ dialog button:hover {
 
     .group-in-charge {
         display: none;
+    }
+    .modal-content {
+        width: 80%;
     }
 }
 
