--- a/templates/Objects/log.html
+++ b/templates/Objects/log.html
@@ -69,7 +69,7 @@
             {% for log in log_users %}
             <div class="timeline-entry">
               <div class="entry-time">{{ log.date|time:"H:i" }}, {{log.date |date:"SHORT_DATE_FORMAT"}}</div>
-              <div class="entry-user">{{log.user_changed.username}} <span class="entry-changer"> Cambio hecho por {{log.user}}</span></div>
+              <div class="entry-user data_changed">{{log.user_changed.username}}</div> <span class="entry-changer"> Cambio hecho por {{log.user}}</span>
               <div class="entry-description">
                 {% trans log.description %}
               </div>
@@ -88,7 +88,7 @@
             {% for log in log_user_groups %}
             <div class="timeline-entry">
               <div class="entry-time">{{ log.date|time:"H:i" }}, {{log.date |date:"SHORT_DATE_FORMAT"}}</div>
-              <div class="entry-group">{{log.group_changed.name}} <span class="entry-changer"> Cambio hecho por {{log.user}}</span></div>
+              <div class="entry-group data_changed">{{log.group_changed.name}}</div> <span class="entry-changer"> Cambio hecho por {{log.user}}</span>
               <div class="entry-description">
                 {% trans log.description %}
               </div>
@@ -107,7 +107,7 @@
             {% for log in log_objects %}
             <div class="timeline-entry">
               <div class="entry-time">{{ log.date|time:"H:i" }}, {{log.date |date:"SHORT_DATE_FORMAT"}}</div>
-              <div class="entry-object">{{log.object.name}} <span class="entry-changer"> Cambio hecho por {{log.in_charge}}</span></div>
+              <div class="entry-object data_changed">{{log.object.name}}</div> <span class="entry-changer"> Cambio hecho por {{log.in_charge}}</span>
               <div class="entry-description">
                 {% trans log.description %}
               </div>
@@ -126,7 +126,7 @@
             {% for log in log_object_groups %}
             <div class="timeline-entry">
               <div class="entry-time">{{ log.date|time:"H:i" }}, {{log.date |date:"SHORT_DATE_FORMAT"}}</div>
-              <div class="entry-object-group">{{log.group_changed.name}} <span class="entry-changer"> Cambio hecho por {{log.user}}</span></div>
+              <div class="entry-object-group data_changed">{{log.group_changed.name}} </div><span class="entry-changer"> Cambio hecho por {{log.user}}</span>
               <div class="entry-description">
                 {% trans log.description %}
               </div>
