--- a/templates/Users/subprofiles_group.html
+++ b/templates/Users/subprofiles_group.html
@@ -41,8 +41,7 @@
             <form class="create-subuser" id='form-subuser' action="{% url 'manage_subusers' %}" enctype="multipart/form-data" method="POST">
                 {% csrf_token %}    
                 {{subuser_form}}
-                <input type="button" value="Crear Usuario" id="open-dialog">
-                <input type="submit" hidden id="submit">
+                <input type="button" value="Crear Usuario" id="create-button">
             </form>
             <input type="checkbox" {{checked_group}} id="create-group">
             <form class="create-group" method="POST" action="{% url 'manage_subusers' %}" enctype="multipart/form-data">
@@ -50,14 +49,28 @@
                 {{group_form}}
                 <input type="submit" value="Crear Grupo">
             </form>
-            <dialog id="group-dialog">
-                <label for="close-dialog" class="material-symbols-outlined">Close</label>
-                <p>Para poder crear un usuario necesita un grupo primero, ¿Desea crear un grupo?</p>
-                <div> 
-                    <button value=0 id="close-dialog">No</button>
-                    <button value=1 id="create">Si</button>
+            <!-- Modal to create group if it ain't selected.-->
+            <div id="createGroupModal" class="modal-overlay" style="display: none;">
+                <div class="modal-content">
+                    <h3>Deseas crear un grupo?</h3>
+                    <p>Para crear un usuario necesitas primero un grupo de usuarios.</p>
+                    <div class="modal-buttons">
+                        <button id="cancelCreate" class="btn-cancel">No</button>
+                        <button id="confirmCreate" class="btn-confirm">Si</button>
+                    </div>
                 </div>
-            </dialog>
+            </div>
+            <!-- Delete confirmation modal -->
+        	<div id="deleteModal" class="modal-overlay" style="display: none;">
+            	<div class="modal-content">
+            	    <h3>Estás seguro?</h3>
+            	    <p>Esto eliminará permanentemente el grupo.</p>
+            	    <div class="modal-buttons">
+            	        <button id="cancelDelete" class="btn-cancel">Cancelar</button>
+            	        <button id="confirmDelete" class="btn-delete">Borrar</button>
+            	    </div>
+            	</div>
+        	</div>
         </div>
         <div class="groups">
         {% for form in forms %}
