--- a/templates/Users/subusers.html
+++ b/templates/Users/subusers.html
@@ -40,8 +40,7 @@
             <form class="create-subuser" id='form-subuser' enctype="multipart/form-data" method="POST">
                 {% csrf_token %}    
                 {{form}}
-                <input type="button" value="Crear Usuario" id="open-dialog">
-                <input type="submit" hidden id="submit">
+                <input type="submit" value="Crear Usuario" id="create-button">
             </form>
             <input type="checkbox" {{checked_group}} id="create-group">
             <form class="create-group" method="POST" enctype="multipart/form-data">
@@ -49,14 +48,16 @@
                 {{group_form}}
                 <input type="submit" value="Crear Grupo">
             </form>
-            <dialog id="group-dialog">
-                <label for="close-dialog" class="material-symbols-outlined">Close</label>
-                <p>Para poder crear un usuario necesita un grupo primero, ¿Desea crear un grupo?</p>
-                <div>
-                    <button value=0 id="close-dialog">No</button>
-                    <button value=1 id="create">Si</button>
+            <div id="createGroupModal" class="modal-overlay" style="display: none;">
+                <div class="modal-content">
+                    <h3>Deseas crear un grupo?</h3>
+                    <p>Para crear un usuario necesitas primero un grupo de usuarios.</p>
+                    <div class="modal-buttons">
+                        <button id="cancelCreate" class="btn-cancel">No</button>
+                        <button id="confirmCreate" class="btn-confirm">Si</button>
+                    </div>
                 </div>
-            </dialog>
+            </div>
         </div> 
         <div class="subusers-table__container">
             <table class="subusers-table">
