--- a/static/CSS/Users/profileStyles.css
+++ b/static/CSS/Users/profileStyles.css
@@ -379,6 +379,79 @@ dialog {
   transform: translateY(-8px);
   pointer-events: none;
 }
+/* DIALOG TO DELETE OBJECT */
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2000;
+}
+
+.modal-content {
+    background: var(--sidebar-color);
+    padding: 20px 30px;
+    border-radius: 12px;
+    width: 30%;
+    text-align: center;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+    animation: fadeIn 0.2s ease-in-out;
+}
+
+.modal-buttons {
+    margin-top: 20px;
+    display: flex;
+    justify-content: right;
+    gap: 5%;
+}
+
+
+.btn-cancel {
+    background: #ccc;
+    border: none;
+    padding: 8px 15px;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.btn-delete {
+    background: var(--fb-color);
+    color: #fff;
+    border: none;
+    padding: 8px 15px;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.btn-cancel:hover {  
+    outline: var(--wood) 1px solid;
+    color: var(--fb-color);
+    background-color: var(--bg-color);
+    font-weight: 600;
+    box-shadow: var(--wood) 0 0 5px;
+}
+.btn-delete:hover {
+    outline: var(--wood) 1px solid;
+    color: var(--sidebar-color);
+    font-weight: 600;
+    box-shadow: var(--wood) 0 0 5px; 
+    background: #c9302c; }
+
+@keyframes slideIn {
+  from {
+    opacity: 0;
+    transform: translateX(100%);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
 
 
 @keyframes slideIn {
