--- a/static/CSS/Borrowings/borrowingsStyles.css
+++ b/static/CSS/Borrowings/borrowingsStyles.css
@@ -195,12 +195,14 @@ textarea {
     resize: none;
 }
 
-.forms-container form.create-borrowing div:has(input[type="file"]) {
+.forms-container form.create-borrowing div:has(input[type="file"]),
+.forms-container form.edit-borrowing div:has(input[type="file"]){
     width: 45%;
 }
 
-.forms-container form.create-borrowing div:has(select) {
-    width: 45%;
+.forms-container form.create-borrowing div:has(select),
+.forms-container form.edit-borrowing div:has(select) {
+    width: 100%;
     margin-right: 10%;
 }
 
@@ -223,6 +225,9 @@ textarea {
     width: 100%;
 }
 
+#editStatus {
+    display: block;
+}
 .errorlist {
     list-style: none;
 }
@@ -232,57 +237,7 @@ textarea {
     font-size: .9rem;
 }
 
-dialog {
-    border: none;
-    border-radius: 20px;
-    padding: 25px 40px;
-}
-
-dialog label.material-symbols-outlined {
-    position: absolute;
-    top: 5px;
-    right: 7px;
-    color: var(--fb-color);
-    background-color: transparent;
-    border: none;
-    font-size: 1.5rem; 
-    cursor: pointer;
-}
-
-dialog p {
-    font-size: 1.2rem;
-    margin-bottom: 20px;
-}
-
-dialog div {
-    display: flex;
-    gap: 15px;
-}
-
-dialog button {
-    background-color: var(--fb-color);
-    color: #fff;
-    width: 50px;
-    padding-top: 3.5px;
-    border: none;
-    outline: none;
-    border-radius: 3px;
-    font-family: inherit;
-    text-transform: uppercase;
-    text-align: center;
-    cursor: pointer;
-    transition: background-color .2s, color .2s, font-weight .2s, outline .2s; 
-}
-
-dialog button:hover {
-    outline: var(--wood) 1px solid;
-    color: var(--fb-color);
-    background-color: var(--bg-color);
-    font-weight: 600;
-    box-shadow: var(--wood) 0 0 5px;
-}
-
-
+/* TABLE */
 .borrowings-table__container {
     width: 96%;
     margin: 1.8% 2%;
@@ -342,6 +297,8 @@ dialog button:hover {
     border-bottom: none;
 }
 
+
+/* MESSAGES */
 .hidden {
     display: none;
 }
