--- a/templates/Borrowings/borrowings.html
+++ b/templates/Borrowings/borrowings.html
@@ -33,13 +33,59 @@
         <div class="forms-container">
             <nav>
                 <label for="create-borrowing" class="material-symbols-outlined close-formBorrowing hidden">arrow_back</label>
+                <label for="edit-borrowing" class="material-symbols-outlined close-formEditBorrowing hidden">arrow_back</label>
             </nav>
             <input type="checkbox" {{checked}} id="create-borrowing">
-            <form class="create-borrowing" id='form-borrowing' enctype="multipart/form-data" method="POST">
+            <form class="create-borrowing" id='form-borrowing' method="POST">
                 {% csrf_token %}    
                 {{form}}
                 <input type="submit" id="submit">
             </form>
+            <input type="checkbox" id="edit-borrowing">
+            <form class="edit-borrowing" id="edit-borrowing-form" method="POST">
+                {% csrf_token %}
+                <input type="hidden" name="id" id="borrowingId">
+                <div>
+                    <label>Objeto:</label>
+                    <select name="object" id="editObject" required>
+                        <option value="" selected>---------</option>
+                        {% for obj in objects %}
+                            <option value="{{ obj.id }}">{{ obj.name }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+              
+                <div>
+                    <label>Encargado:</label>
+                    <select name="in_charge" id="editInCharge" required>
+                        <option value="" selected>---------</option>
+                        {% for subuser in subusers %}
+                            <option value="{{ subuser.id }}">{{ subuser.user.first_name }} {{subuser.user.last_name}} - {{subuser.group.name}}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                
+                <div>
+                    <label>Cantidad:</label>
+                    <input type="number" name="stock" id="editStock" required>
+                </div>
+                
+                <div>
+                    <label>Fecha Límite:</label>
+                    <input type="datetime-local" name="date_limit" id="editDateLimit" required>
+                </div>
+              
+                <div>
+                    <label>Finalizar Préstamo</label>
+                    <input type="checkbox" name="status" id="editStatus">
+                </div>
+              
+                <div class="form-actions">
+                  <input type="submit" value="Guardar">
+                  <button type="button" id="cancelBtn">Cancelar</button>
+                </div>
+            </form>
+
         </div> 
         <div class="borrowings-table__container">
             <table class="borrowings-table">
@@ -51,6 +97,7 @@
                         <th>Cantidad</th>
                         <th>Fecha Límite</th>
                         <th>Estado</th>
+                        <th>Editar</th>
                     </tr>
                 </thead>
 
@@ -63,6 +110,18 @@
                         <td>{{borrowing.stock}}</td>
                         <td>{{borrowing.date_limit}}</td>
                         <td>{% if borrowing.completed %}Completado{% else %}Pendiente{% endif %}</td>
+                        <td>
+                            <button 
+                                class="edit-button"
+                                data-id="{{ borrowing.id }}"
+                                data-object="{{ borrowing.object.id }}"
+                                data-in-charge="{{ borrowing.in_charge.id }}"
+                                data-stock="{{ borrowing.stock }}"
+                                data-date-limit="{{ borrowing.date_limit|date:'Y-m-d\\TH:i' }}"
+                                data-status="{{ borrowing.status }}">
+                                <span class="material-symbols-outlined">edit</span>
+                            </button>
+                        </td>
                     </tr>
                     {% endfor %}
                 </tbody>
