--- a/static/CSS/Users/profileStyles.css
+++ b/static/CSS/Users/profileStyles.css
@@ -401,7 +401,7 @@ dialog {
     text-align: center;
     box-shadow: 0 4px 15px rgba(0,0,0,0.2);
     animation: fadeIn 0.2s ease-in-out;
-}
+} 
 
 .modal-buttons {
     margin-top: 20px;
@@ -486,18 +486,20 @@ dialog {
         align-items: center;
     }
 
+    .profile-container > .info-container, .profile-container > .profile-img-container {
+        width: 95%;
+    }
+
     .profile-img-container {
         position: absolute;
         top: 7.5%;
-        width: 90%;
         height: 25%;
         border-radius: 20px 20px 0 0;
     }
 
-    .profile-container form {
+    .profile-container .info-container {
         position: absolute;
         bottom: 17.5%;
-        width: 90%;
         height: 50%;
         border-radius: 0 0 20px 20px;
     }
