--- a/static/CSS/Borrowings/borrowingsStyles.css
+++ b/static/CSS/Borrowings/borrowingsStyles.css
@@ -143,16 +143,17 @@ aside:has(input[type="checkbox"]:checked) ~ main {
 }
 
 .forms-container form {
+    display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
-    height: 82.5dvh;
+    height: 70dvh;
     width: 50%;
     padding: 0 40px;
     border-radius: 20px;
     margin: calc(calc(calc(100dvh - calc(2rem + 44.78px)) - 50dvh) / 2) 25%;
-    margin-top: calc(calc(calc(100dvh - calc(2rem + 44.78px)) - 82.5dvh) / 2);
+    margin-top: calc(calc(calc(100dvh - calc(2rem + 44.78px)) - 70dvh) / 2);
     background-color: var(--sidebar-color);
 }
 
@@ -195,15 +196,31 @@ textarea {
     resize: none;
 }
 
-.forms-container form.create-borrowing div:has(input[type="file"]),
-.forms-container form.edit-borrowing div:has(input[type="file"]){
-    width: 45%;
+.edit-borrowing div:has(input[type="datetime-local"]) {
+    width: calc(50% - 20px);
+    margin-right: 40px;
 }
 
-.forms-container form.create-borrowing div:has(select),
-.forms-container form.edit-borrowing div:has(select) {
+.edit-borrowing div:has(input[type="checkbox"]) {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.edit-borrowing div:has(input[type="checkbox"]) {
+    width: calc(50% - 20px);
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+.edit-borrowing div input[type="checkbox"] {
+    width: 15px;
+    height: 15px;
+}
+
+.forms-container form.create-borrowing div:has(select), .forms-container form.edit-borrowing div:has(select) {
     width: 100%;
-    margin-right: 10%;
 }
 
 .forms-container form input:focus, form select:focus, textarea:focus {
@@ -277,11 +294,6 @@ textarea {
     background-color: #f9f9f9;
 }
 
-.borrowings-table tbody tr:hover {
-    background-color: #c7c3bf;
-    cursor: pointer;
-}
-
 .borrowings-table td {
     padding: 12px;
     border-bottom: 1px solid #ddd;
@@ -297,7 +309,21 @@ textarea {
     border-bottom: none;
 }
 
+.edit-button {
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    height: 100%;
+    width: 100%;
+    display: grid;
+    place-content: center;
+    font-size: 1.2rem;
+    transition: filter .2s;
+}
 
+.edit-button:hover {
+    filter: drop-shadow(0 0 5px var(--fb-color));
+}
 /* MESSAGES */
 .hidden {
     display: none;
@@ -484,7 +510,7 @@ textarea {
         display: none;
     }
     
-    td:last-child, th:last-child {
+    .small-view {
         display: none;
     }
 
