--- a/templates/sideBar.html
+++ b/templates/sideBar.html
@@ -68,7 +68,7 @@
             <li class="sidebar__tools">
                 <p>Herramientas<span class="material-symbols-outlined">build</span></p>
                 <div class="sidebar__item">
-                    <label for="create-borrowing" class="sidebar__item-link export-log-label">
+                    <label for="create-borrowing" class="sidebar__item-link create-borrowing-label">
                         <span class="material-symbols-outlined">add</span>
                         <p>Crear Préstamo</p>
                     </label>
