--- a/templates/LiveChats/chats.html
+++ b/templates/LiveChats/chats.html
@@ -7,22 +7,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="{%static '/CSS/sideBarStyles.css'%}">
-    <link rel="stylesheet" href="{% static '/CSS/Borrowings/borrowingsStyles.css' %}">
-    <title>Prestamos - Log Inventory</title>
+    <link rel="stylesheet" href="{% static '/CSS/ChatLives/chatsStyles.css' %}">
+    <title>Chats - Log Inventory</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
     <meta name="description" content="Prestamos Log Inventory">
     <meta name="author" content="Log Inventory"> 
     <meta name="robots" content="noindex, nofollow">   
 </head>   
 <body>
-    {% include 'sideBar.html' with path='manage_borrowings' profile=profile type=type permissions=permissions active_borrowings="active"%}
+    {% include 'sideBar.html' with path='manage_chats' profile=profile type=type permissions=permissions active_chats="active"%}
     <main>
         <div class="filter-bar container"> 
             <div class="filter-bar__filter-container row">
                 <input type="submit" value="sort" class="filter-bar__a-z material-symbols-outlined col-md-1 col-0" title="Ordenar a-z">
                 <input type="submit" value="sort" class="filter-bar__z-a material-symbols-outlined col-md-1 col-0" title="Ordenar z-a">
                 <div class="filter-bar__name col-md-4 col-12">
-                    <input type="text" class="filter-bar__search" placeholder="Buscar por objeto...">
+                    <input type="text" class="filter-bar__search" placeholder="Buscar por nombre...">
                     <input value="search" type="submit" class="material-symbols-outlined">
                 </div>
                 <div class="filter-bar__logo-container col-md-5 col-0">
@@ -32,53 +32,51 @@
         </div>
         <div class="forms-container">
             <nav>
-                <label for="create-borrowing" class="material-symbols-outlined close-formCreate hidden">arrow_back</label>
-                <label for="edit-borrowing" class="material-symbols-outlined close-formEdit hidden">arrow_back</label>
+                <label for="create-borrowing" class="material-symbols-outlined close-formBorrowing hidden">arrow_back</label>
+                <label for="edit-borrowing" class="material-symbols-outlined close-formEditBorrowing hidden">arrow_back</label>
             </nav>
-            <input type="checkbox" {{checked_create}} id="create-borrowing">
-            <form class="create-borrowing hidden" id='create-borrowing-form' method="POST">
+            <input type="checkbox" {{checked}} id="create-borrowing">
+            <form class="create-borrowing" id='form-borrowing' method="POST">
                 {% csrf_token %}    
-                {{create_form}}
+                {{form}}
                 <input type="submit" id="submit">
             </form>
-            <input type="checkbox" {{checked_edit}} id="edit-borrowing">
-            <form class="edit-borrowing hidden" id="edit-borrowing-form" method="POST">
+            <input type="checkbox" id="edit-borrowing">
+            <form class="edit-borrowing" id="edit-borrowing-form" method="POST">
                 {% csrf_token %}
-                <input type="hidden" name="id" id="borrowingId" value="{{id}}">
+                <input type="hidden" name="id" id="borrowingId">
                 <div>
-                    <label for="editObject">Objeto:</label>
+                    <label>Objeto:</label>
                     <select name="object" id="editObject" required>
+                        <option value="" selected>---------</option>
                         {% for obj in objects %}
-                            <option value="{{ obj.id }}" {% if edit_form.data.object|default:None|stringformat:"s" == obj.id|stringformat:"s" %}
-                            selected {% endif %}>{{ obj.name }}</option>
+                            <option value="{{ obj.id }}">{{ obj.name }}</option>
                         {% endfor %}
                     </select>
                 </div>
               
                 <div>
-                    <label for="editInCharge">Encargado:</label>
+                    <label>Encargado:</label>
                     <select name="in_charge" id="editInCharge" required>
+                        <option value="" selected>---------</option>
                         {% for subuser in subusers %}
-                            <option value="{{ subuser.id }}" {% if edit_form.data.in_charge|default:None|stringformat:"s" == subuser.id|stringformat:"s" %} selected {% endif %}>{{ subuser.user.first_name }} {{subuser.user.last_name}} - {{subuser.group.name}}</option>
+                            <option value="{{ subuser.id }}">{{ subuser.user.first_name }} {{subuser.user.last_name}} - {{subuser.group.name}}</option>
                         {% endfor %}
                     </select>
                 </div>
                 
                 <div>
-                    <label for="editStock">Cantidad:</label>
-                    {% if edit_form.errors.stock %}
-                    {{edit_form.errors.stock}}
-                    {% endif %}
-                    <input type="number" name="stock" id="editStock" required value="{{ edit_form.instance.stock|default:None }}">
+                    <label>Cantidad:</label>
+                    <input type="number" name="stock" id="editStock" required>
                 </div>
                 
                 <div>
-                    <label for="editDateLimit">Fecha Límite:</label>
-                    <input type="datetime-local" name="date_limit" id="editDateLimit" required value="{{ edit_form.data.date_limit|default:None }}">
-                </div> 
+                    <label>Fecha Límite:</label>
+                    <input type="datetime-local" name="date_limit" id="editDateLimit" required>
+                </div>
               
                 <div>
-                    <label for="editStatus">Finalizar Préstamo:</label>
+                    <label>Finalizar Préstamo:</label>
                     <input type="checkbox" name="status" id="editStatus">
                 </div>
               
@@ -93,36 +91,25 @@
                 <thead>
                     <tr>
                         <th>ID</th>
-                        <th>Objeto</th>
-                        <th class="small-view">Encargado</th>
-                        <th class="small-view">Cantidad</th>
-                        <th class="small-view">Fecha Límite</th>
-                        <th>Estado</th>
+                        <th>Chat con</th>
                         <th>Editar</th>
                     </tr>
                 </thead>
 
                 <tbody>
-                    {% for borrowing in borrowings %}
+                    {% for chat in chats %}
                     <tr>
                         <td>{{forloop.counter}}</td>
-                        <td class="object_name">{{borrowing.object.name}}</td>
-                        <td class="small-view">{{borrowing.in_charge.user.first_name}} {{borrowing.in_charge.user.last_name}}</td>
-                        <td class="small-view">{{borrowing.stock}}</td>
-                        <td class="small-view">{{borrowing.date_limit}}</td>
-                        <td>{% if borrowing.completed %}Completado{% else %}Pendiente{% endif %}</td>
+                        <td class="object_name">{{chat.subuser}}</td>
+                        <td class="small-view">{{chat.subuser.user.first_name}} {{chat.subuser.user.last_name}} - {{chat.subuser.group.name}}</td>
                         <td>
-                            <label 
+                            <button 
                                 class="edit-button"
-                                for="edit-borrowing"
-                                data-id="{{ borrowing.id }}"
-                                data-object="{{ borrowing.object.id }}"
-                                data-in-charge="{{ borrowing.in_charge.id }}"
-                                data-stock="{{ borrowing.stock }}"
-                                data-date-limit="{{ borrowing.date_limit|date:'Y-m-d\\TH:i' }}"
-                                data-status="{{ borrowing.status }}">
+                                data-id="{{ chat.id }}"
+                                data-admin-user="{{ chat.admin_user.id }}"
+                                data-subuser="{{ chat.in_subuser.id }}">
                                 <span class="material-symbols-outlined">edit</span>
-                            </label>
+                            </button>
                         </td>
                     </tr>
                     {% endfor %}
